Fixed some faulty assumptions